# nb

./: CLAUDE.md  Cargo.toml  README.md  go.mod  main.go  main.py
.github/workflows/: ci.yml
cmd/: log.go  root.go  serve.go  sync.go
config/: config.go  config_test.go
editor/: editor.go
io/: io.go
log/: log.go  log_test.go
nb/: Cargo.toml
nb/src/: config.rs  editor.rs  main.rs
nb/src/subcmd/: init.rs  log.rs  mod.rs  open.rs  serve.rs
serve/: serve.go
src/: cli.rs  config.rs  document.rs  editor.rs  main.rs  notebook.rs
src/agent/: claude.rs  mock.rs  mod.rs  types.rs
static/: main.css
templates/: index.html  log.tpl.md
ui/: index.html  package-lock.json  package.json
