[package]
name = "nb"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
toml = "0.9.10"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.24.0"
